--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <title>Document</title>   
 </head>
 <body>
+
+    <div class="progress">
+        <span class="progress-value"></span>
+    </div>
     <h1>SCROLL COUNT</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam sit aspernatur, eveniet tenetur maxime fuga. 
         Sint voluptates voluptatem dolores sequi obcaecati illo, sed unde. Cupiditate eos omnis nesciunt repellat exercitationem 
