srolljs folder created

--- a/index.html
+++ b/index.html
@@ -46,5 +46,7 @@
         aliquid perspiciatis sunt itaque quidem dolorem nihil veritatis! Adipisci qui libero debitis exercitationem,
         fuga magnam? Quibusdam quod, voluptates delectus nobis sunt dignissimos. Tenetur amet unde delectus in, rerum magni.
     </p>
+
+    <script src="assets/scroll.js"></script>
 </body>
 </html>
