scrollvalue added in js file

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 
-    <div class="progress">
-        <span class="progress-value"></span>
+    <div class="progress" id="progress">
+        <span class="progress-value" id="progress-value"></span>
     </div>
     <h1>SCROLL COUNT</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam sit aspernatur, eveniet tenetur maxime fuga. 
